don't allow duplicate names to be added to the crew

--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -16,4 +16,5 @@
 
 <input #name type="text">
 <label for="">First Mission <input #firstMission type="checkbox"></label>
-<button (click)="add(name.value, firstMission.checked); name.value = ''">Add</button>
+<button (click)="message = add(name.value, firstMission.checked); name.value = ''">Add</button>
+<p *ngIf="message">{{message}}</p>
