--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -14,7 +14,7 @@
   </li>
 </ul>
 
-<input #name type="text">
+<input #name type="text" (keyup.enter)="message = add(name.value, firstMission.checked); name.value = ''">
 <label for="">First Mission <input #firstMission type="checkbox"></label>
 <button (click)="message = add(name.value, firstMission.checked); name.value = ''">Add</button>
 <p *ngIf="message">{{message}}</p>
