--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -1,6 +1,10 @@
 <h3>Experiments</h3>
 <ul>
-  <li>Mars soil sample</li>
-  <li>Plant growth in habitat</li>
-  <li>Human bone density</li>
+  <li *ngFor="let experiment of experiments">
+    {{experiment}}
+  </li>
 </ul>
+
+<input #newExperiment type="text" (keyup.enter)="message = add(newExperiment.value); newExperiment.value = ''">
+<button (click)="message = add(newExperiment.value); newExperiment.value = ''">Add</button>
+<p *ngIf="message">{{message}}</p>
