allow user to remove experiments

--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -2,6 +2,7 @@
 <ul>
   <li *ngFor="let experiment of experiments">
     {{experiment}}
+    <button (click)="remove(experiment)">remove</button>
   </li>
 </ul>
 
