--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -2,19 +2,36 @@
 <ul>
   <li *ngFor="let member of crew">
     <span *ngIf="memberBeingEdited !== member; else elseBlock">
-      <span (click)="edit(member)" class=editable-text>{{member.name}} </span>
+      <span (click)="edit(member)" class="editable-text"
+        >{{ member.name }}
+      </span>
       <span *ngIf="member.firstMission">- 1st</span>
       <button (click)="remove(member)">remove</button>
     </span>
 
     <ng-template #elseBlock>
-      <input #updatedName (keyup.enter)="save(updatedName.value, member)" value="{{member.name}}" type="text">
+      <input
+        #updatedName
+        (keyup.enter)="save(updatedName.value, member)"
+        value="{{ member.name }}"
+        type="text"
+      />
       <button (click)="save(updatedName.value, member)">save</button>
     </ng-template>
   </li>
 </ul>
 
-<input #name type="text" (keyup.enter)="message = add(name.value, firstMission.checked); name.value = ''">
-<label for="">First Mission <input #firstMission type="checkbox"></label>
-<button (click)="message = add(name.value, firstMission.checked); name.value = ''">Add</button>
-<p *ngIf="message">{{message}}</p>
+<input
+  #name
+  type="text"
+  (keyup.enter)="
+    message = add(name.value, firstMission.checked); name.value = ''
+  "
+/>
+<label for="">First Mission <input #firstMission type="checkbox" /></label>
+<button
+  (click)="message = add(name.value, firstMission.checked); name.value = ''"
+>
+  Add
+</button>
+<p *ngIf="message">{{ message }}</p>
