--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,24 +1,36 @@
 <h1>Mission Planning Dashboard</h1>
 
 <h3>
-    Mission Name:
-    <span *ngIf="!editingMission; else editMissionBlock">
-        <span class="editable-text" (click)="editingMission = true;">{{ missionName }}</span>
-    </span>
-    <ng-template #editMissionBlock>
-        <input #mission (keyup.enter)="updateMission(mission.value)" value="{{ missionName }}"/>
-        <button (click)="updateMission(mission.value)">save</button>
-    </ng-template>
+  Mission Name:
+  <span *ngIf="!editingMission; else editMissionBlock">
+    <span class="editable-text" (click)="editingMission = true">{{
+      missionName
+    }}</span>
+  </span>
+  <ng-template #editMissionBlock>
+    <input
+      #mission
+      (keyup.enter)="updateMission(mission.value)"
+      value="{{ missionName }}"
+    />
+    <button (click)="updateMission(mission.value)">save</button>
+  </ng-template>
 </h3>
 
 <h3>
-    Carrier Rocket: 
-    <span *ngIf="!editingRocket; else editRocketBlock">
-        <span class="editable-text" (click)="editingRocket = true">{{ rocketName }}</span>
-    </span>
-    <ng-template #editRocketBlock>
-        <input #rocket type="text" (keyup.enter)="updateRocket(rocket.value)" value="{{rocketName}}">
-        <button (click)="updateRocket(rocket.value)">save</button>
-    </ng-template>
-
+  Carrier Rocket:
+  <span *ngIf="!editingRocket; else editRocketBlock">
+    <span class="editable-text" (click)="editingRocket = true">{{
+      rocketName
+    }}</span>
+  </span>
+  <ng-template #editRocketBlock>
+    <input
+      #rocket
+      type="text"
+      (keyup.enter)="updateRocket(rocket.value)"
+      value="{{ rocketName }}"
+    />
+    <button (click)="updateRocket(rocket.value)">save</button>
+  </ng-template>
 </h3>
