--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let item of equipment">
     <span *ngIf="itemBeingEdited !== item; else elseBlock">
       <span (click)="edit(item)" class="editable-text">{{ item }} </span>
-      <button (click)="remove(item)">remove</button>
+      <button class="remove" (click)="remove(item)">remove</button>
     </span>
 
     <ng-template #elseBlock>
@@ -13,7 +13,7 @@
         value="{{ item }}"
         type="text"
       />
-      <button (click)="save(updatedItem.value, item)">save</button>
+      <button class="save" (click)="save(updatedItem.value, item)">save</button>
     </ng-template>
   </li>
 </ul>
@@ -23,5 +23,7 @@
   type="text"
   (keyup.enter)="message = add(item.value); item.value = ''"
 />
-<button (click)="message = add(item.value); item.value = ''">Add</button>
+<button class="add" (click)="message = add(item.value); item.value = ''">
+  Add
+</button>
 <p *ngIf="message">{{ message }}</p>
