--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -9,9 +9,11 @@
   <h3>
     Crew
     <!-- Add a span tag here to display 'Full' when the crew reaches 3. -->
+    <span *ngIf="crew.length === 3"> Full</span>
   </h3>
   <ol>
-    <li *ngFor="let astronaut of crew">{{ astronaut.name }}</li>
+    <li *ngFor="let astronaut of crew" (mouseover)="mouseoverCrewMember = astronaut;" (mouseout)="mouseoverCrewMember = null">{{ astronaut.name }}</li>
   </ol>
   <!-- Add an img tag here to display astronaut photos. -->
+  <img *ngIf="mouseoverCrewMember" src="{{mouseoverCrewMember.photo}}" alt="">
 </div>
