--- a/src/app/crew/crew.component.html
+++ b/src/app/crew/crew.component.html
@@ -1,7 +1,13 @@
 <div class="displayBox">
   <h3>Candidates</h3>
   <ul>
-    <li *ngFor="let member of candidates" (click)="addCrewMember(member)" [class.selected]="crew.includes(member)">{{ member.name }}</li>
+    <li
+      *ngFor="let member of candidates"
+      (click)="addCrewMember(member)"
+      [class.selected]="crew.includes(member)"
+    >
+      {{ member.name }}
+    </li>
   </ul>
 </div>
 <hr />
@@ -12,8 +18,18 @@
     <span *ngIf="crew.length === 3"> Full</span>
   </h3>
   <ol>
-    <li *ngFor="let astronaut of crew" (mouseover)="mouseoverCrewMember = astronaut;" (mouseout)="mouseoverCrewMember = null">{{ astronaut.name }}</li>
+    <li
+      *ngFor="let astronaut of crew"
+      (mouseover)="mouseoverCrewMember = astronaut"
+      (mouseout)="mouseoverCrewMember = null"
+    >
+      {{ astronaut.name }}
+    </li>
   </ol>
   <!-- Add an img tag here to display astronaut photos. -->
-  <img *ngIf="mouseoverCrewMember" src="{{mouseoverCrewMember.photo}}" alt="">
+  <img
+    *ngIf="mouseoverCrewMember"
+    src="{{ mouseoverCrewMember.photo }}"
+    alt=""
+  />
 </div>
