--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -30,5 +30,5 @@
     Mass Budget Remaining: {{ maximumAllowedMass - cargoMass }} kg
   </p>
   <!-- Add the "Empty Hold" button here. -->
-  <button (click)="emptyHold()">Empty Hold</button>
+  <button class="empty" (click)="emptyHold()">Empty Hold</button>
 </div>
