--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-size: 1rem;
+}
+
 body {
     margin: 0;
     padding: 0;
-
     background-color: lightblue;
 }
+
+hr {
+    border-color: black;
+  }
