--- a/src/app/experiments/experiments.component.css
+++ b/src/app/experiments/experiments.component.css
@@ -1,8 +1,17 @@
+:host {
+    display: block;
+    padding-left: 4rem;
+  }
+
 .displayBox {
-    height: 275px;
     width: auto;
 }
 
 h3 {
     text-align: center;
+    font-size: 1.25rem;
+}
+
+li {
+    line-height: 2;
 }
