--- a/src/app/equipment/equipment.component.css
+++ b/src/app/equipment/equipment.component.css
@@ -12,6 +12,10 @@ button {
   margin: 2px;
   cursor: pointer;
   font-size: .85rem;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: white;
 }
 
 h3 {
@@ -26,18 +30,14 @@ li {
 /* Add an 'active' class to style the background of the 'Add to Cargo Hold' buttons. */
 .active {
   background-color: rgb(6, 74, 6);
-  border: none;
-  border-radius: 5px;
-  padding: 3px 8px;
-  color: white;
 }
 
 .empty {
-  border: none;
-  border-radius: 5px;
-  padding: 3px 8px;
-  color: white;
   background-color: darkred;
+}
+
+.remove {
+  background-color: rgb(255, 123, 0);
 }
 
 /* Add the 'nearMaxMass' class style here: */
