--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -28,7 +28,10 @@
 <div class="displayBox">
   <h3>Cargo Hold: {{ cargoHold.length }}/{{ maxItems }} Spots Filled</h3>
   <ol>
-    <li *ngFor="let equipment of cargoHold">{{ equipment.name }}</li>
+    <li *ngFor="let equipment of cargoHold">
+      {{ equipment.name
+      }}<button class="remove" (click)="removeItem(equipment)">Remove</button>
+    </li>
   </ol>
   <p>Mass in Hold: {{ cargoMass }} kg</p>
   <p [class.nearMaxMass]="cargoMass >= maximumAllowedMass - 200">
