--- a/src/app/experiments/experiments.component.css
+++ b/src/app/experiments/experiments.component.css
@@ -1,17 +1,39 @@
 :host {
-    display: block;
-    padding-left: 4rem;
-  }
+  display: block;
+  padding-left: 4rem;
+}
 
 .displayBox {
-    width: auto;
+  width: auto;
 }
 
 h3 {
-    text-align: center;
-    font-size: 1.25rem;
+  text-align: center;
+  font-size: 1.25rem;
 }
 
 li {
-    line-height: 2;
+  line-height: 2;
+}
+
+button {
+  margin: 2px;
+  cursor: pointer;
+  font-size: 0.85rem;
+  border: none;
+  border-radius: 5px;
+  padding: 3px 8px;
+  color: white;
+}
+
+.active {
+  background-color: darkblue;
+}
+
+.remove {
+  background-color: rgb(255, 123, 0);
+}
+
+.clearAll {
+  background-color: darkred;
 }
