--- a/src/app/experiments/experiments.component.html
+++ b/src/app/experiments/experiments.component.html
@@ -1,7 +1,27 @@
 <div class="displayBox">
-    <h3>Possible Experiments</h3>
-    <ul>
-      <li *ngFor="let experiment of experiments">{{experiment}}</li>
-    </ul>
+  <h3>Possible Experiments</h3>
+  <ul>
+    <li *ngFor="let experiment of experiments">
+      <button
+        (click)="selectExperiment(experiment)"
+        [class.active]="
+          !selectedExperiments.includes(experiment) &&
+          selectedExperiments.length < 2
+        "
+        [disabled]="selectedExperiments.includes(experiment) || selectedExperiments.length >= 2"
+      >
+        Select Experiment</button
+      >{{ experiment }}
+    </li>
+  </ul>
 </div>
-<hr>
+<hr />
+<h3>Selected Experiments: {{ selectedExperiments.length }}/2 Spots Filled</h3>
+<ol>
+  <li *ngFor="let experiment of selectedExperiments">
+    {{ experiment }}<button class="remove">Remove</button>
+  </li>
+</ol>
+<button *ngIf="selectedExperiments.length > 0" class="clearAll">
+  Unselect All
+</button>
