--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,7 +2,7 @@
 
 .box {
   display: flex;
-  padding: 10px;
+  padding: 10px 0;
   justify-content: center;
 }
 
@@ -10,4 +10,5 @@ app-crew,
 app-equipment,
 app-experiments {
   font-family: 'Gantari', sans-serif;
+  width: 33%;
 }
